# routes/index.js
@@ -1,17 +1,7 @@
-const routes = require('express').Router();
-const namesController = require('../controllers');
+const express = require('express');
+const router = express.Router();
 
-const swaggerUi = require('swagger-ui-express');
-const swaggerDocument = require('../swagger.json');
+router.use('/', require('./swagger'));
+router.use('/contacts', require('./contacts'));
 
-
-routes.get('/', namesController.bestFriend);
-
-routes.get('/charlotte', namesController.bestGirlFriend);
-
-routes.use('/contacts', require('./contacts'))
-
-module.exports = routes;
-
-routes.use('/api-docs', swaggerUi.serve);
-routes.get('/api-docs', swaggerUi.setup(swaggerDocument));
+module.exports = router;
